# robocup2027-linetrace

./: CMakeLists.txt  README.md
apps/collector/: CMakeLists.txt
apps/collector/src/: dataset_writer.cpp  dataset_writer.h  main.cpp  shared_state.h
apps/control_station/: CMakeLists.txt
apps/control_station/src/: gamepad.h  gamepad_factory.cpp  gamepad_scripted.cpp  gamepad_sdl.cpp  input_mouse.cpp  main.cpp
apps/executor/: CMakeLists.txt
apps/executor/src/: main.cpp
apps/push_session/: CMakeLists.txt
apps/push_session/src/: main.cpp
apps/trainer/: CMakeLists.txt
apps/trainer/src/: augment.cpp  augment.h  dataset.cpp  dataset.h  model_probe.cpp  train.cpp
libs/camera/: CMakeLists.txt
libs/camera/include/camera/: frame_source.h
libs/camera/src/: frame_source.cpp  libcamera_source.cpp  opencv_source.cpp
libs/common/: CMakeLists.txt
libs/common/include/common/: config.h  label_codec.h  mixing.h  proto.h
libs/common_torch/: CMakeLists.txt
libs/common_torch/include/common_torch/: model.h  preprocess.h
libs/common_torch/src/: model.cpp  preprocess.cpp
libs/esp32_driver/: CMakeLists.txt
libs/esp32_driver/include/esp32_driver/: esp32_driver.h  port_scan.h  protocol.h  serial_port.h
libs/esp32_driver/src/: esp32_driver.cpp  port_scan.cpp  protocol.cpp  serial_port.cpp
libs/esp32_driver/tools/: uart_probe.cpp
libs/netutil/: CMakeLists.txt
libs/netutil/include/netutil/: net.h  preview_sender.h
libs/netutil/src/: net.cpp
libs/transfer_client/: CMakeLists.txt
libs/transfer_client/include/transfer_client/: transfer_client.h  wire.h
libs/transfer_client/src/: transfer_client.cpp  wire.cpp
models/: linetrace_model.pt  model_info.json
models_full/: linetrace_model.pt  model_info.json
models_mem/: linetrace_model.pt  model_info.json
models_new/: linetrace_model.pt  model_info.json
models_v2_mem/: linetrace_model.pt  model_info.json
tests/: CMakeLists.txt  common_test.cpp  esp32_driver_test.cpp  send_control.py  transfer_client_test.cpp
